--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-carousel": "^0.18.0",
+    "vue-slick-carousel": "^1.0.6",
+    "vue-template-compiler": "^2.7.14"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.3",
     "vite": "^2.0.5",
-    "vite-plugin-vue2": "^2.0.1"
+    "vite-plugin-vue2": "^2.0.2"
   }
 }
